SERVER-78862 fixed nested $elemMatch serialization