src/mongo/db/matcher/expression_serialization_test.cpp
@@ -2202,5 +2202,35 @@ TEST(InternalSchemaAllElemMatchFromIndexMatchExpression, RedactsExpressionCorrec
         })",
         elemMatchExpr->getSerializedRightHandSide(opts));
 }
+
+TEST(SerializeBasic, SerializesNestedElemMatchCorrectly) {
+    auto query = fromjson(R"({a: {$elemMatch: {$elemMatch: {b: {$lt: 6, $gt: 4}}}}})");
+    boost::intrusive_ptr<ExpressionContextForTest> expCtx(new ExpressionContextForTest());
+    auto objMatch = MatchExpressionParser::parse(query, expCtx);
+    ASSERT_OK(objMatch.getStatus());
+    SerializationOptions opts;
+    opts.literalPolicy = LiteralSerializationPolicy::kToDebugTypeString;
+    ASSERT_BSONOBJ_EQ_AUTO(
+        R"({"a": {
+                "$elemMatch": {
+                    "$elemMatch": {
+                        "$and": [
+                            {
+                                "b": {
+                                    "$lt": "?number"
+                                }
+                            },
+                            {
+                                "b": {
+                                    "$gt": "?number"
+                                }
+                            }
+                        ]
+                    }
+                }
+            }
+        })",
+        objMatch.getValue()->serialize(opts));
+}
 }  // namespace
 }  // namespace mongo
